# arco

./: .gitignore  CLAUDE.md  README.md  build_all.bat  build_all.sh  build_everything_cmd.sh  build_pdcurses.bat  design.md  getvsenv.bat  make_src_for_build_everything_cmd.sh  setup_arco_win.bat
apps/: README.md
apps/basic/: CMakeLists.txt  dspmanifest.txt  dspsources.cmakeinclude
apps/common/: arco_cmake_macros.txt  libraries-example.txt  make_arco_interface.srp  setpath.sh
apps/handtrack/: CMakeLists.txt  dspmanifest.txt  init.srp
apps/perfdata/: CMakeLists.txt  dspmanifest.txt  init.srp
apps/point/: CMakeLists.txt  dspmanifest.txt  init.srp  launchpadx.srp  makesamps.sal  samps.srp  wxserpent.icns
apps/pytest/: CMakeLists.txt  dspmanifest.txt  pytest.py
apps/resound/: CMakeLists.txt  build_resound.srp  dspmanifest.txt  four_of_a_kind.srp  hall_of_mirrors.srp  init.srp  init_basic.srp  midicontrol.srp  movement.srp  o_for_a_thousand.srp  resound.icns  ripples_in_time.srp  side_band.srp  someone_is_following_you.srp  the_bell_tower.srp
apps/sep/: CMakeLists.txt  air.srp  allugens.srp  build_sep.srp  dspmanifest.txt  fast.srp  gatedfoo.srp  gliss.srp  init.srp  melo.srp  midicontrol.srp  pitchdly.srp  pizz.srp  points.srp  sep.icns  sepcontrols.srp  simulator.srp
apps/server/: README.txt  arco.prefs
apps/test/: CMakeLists.txt  FFTCalculator.cpp  FFTCalculator.h  allugens.srp  daserpent copy-Info.plist  dspmanifest.txt  init.srp  pitch.srp  score.srp  soundfont-example.srp  supersaw.srp  supersawdemo.srp  synth.srp  wxserpent.icns
apps/tpt/: CMakeLists.txt  README.md  autofx.srp  autofxctrl.srp  classify.srp  densify.srp  drums.srp  dspmanifest.txt  flsynctrl.srp  harmony.srp  init.srp  labellog.srp  labels.srp  multirec.srp  notes-with-note_info.srp  notes.srp  notes23aug2025.srp  phraserecorder.srp  plotnotes.srp  programs.srp  run  soundfont.srp  statemgr.srp  stylectrl.srp  tempoctrl.srp  vaecontrol.srp
arco/: CMakeCache.txt  CMakeLists.txt
arco/src/: ChordDetector.cpp  ChordDetector.h  Chromagram.cpp  Chromagram.h  FFTCalculator.cpp  FFTCalculator.h  add.cpp  add.h  addb.cpp  addb.h  allpass.cpp  allpass.h  alpass.cpp  alpass.h  arcoinit.cpp  arcoinit.h  arcotypes.h  arcougen.h  arcoutil.cpp  arcoutil.h  audioblob.cpp  audioblob.h  audioblock.cpp  audioblock.h  audioio.cpp  audioio.h  blend.cpp  blend.h  blendb.cpp  blendb.h  blockqueue.h  chorddetect.cpp  chorddetect.cpp.bak1  chorddetect.cpp.bak2  chorddetect.h  chorddetectbak1.cpp  const.cpp  const.h  dcblock.h  delay.cpp  (+119 more)
benchmarks/: CMakeLists.txt  README.txt  allaudio.cpp  arc128.cpp  arco128.cpp  arco16.cpp  arco2.cpp  arco256.cpp  arco32.cpp  arco4.cpp  arco64.cpp  arco8.cpp  arcolike.cpp  arcolike16.cpp  arcolike2.cpp  arcolike2_run_methods_in_state_class.cpp  arcolike64.cpp  arcolikecnt.cpp  arcoopt.cpp  benchmark-runner-1.sh  benchmark-runner.sh  block128.cpp  block128cnt.cpp  block16.cpp  block2.cpp  block256.cpp  block2cnt.cpp  block2cnt.txt  block32.cpp  block4.cpp  block64.cpp  block8.cpp  const.h  data-analysis-script.py  fastchannels.cpp  fixphase.cpp  noclosure.cpp  nopoly.cpp  noterminate.cpp  report.cpp  (+6 more)
cmupv/: CMakeLists.txt
cmupv/src/: cmupv.c  cmupv.h  plot.gp  resamp.cpp  resamp.h  resamptest.cpp  resamptest.sal  testdata.txt
doc/: building.md  constraints.md  design.md  directories.md  installation.md  instruments.md  pyarco.md  server.md  ugens.md
modal/docs/: README.txt
modal/src/: onsetdetection.cpp  onsetdetection.h
o2litepy/: __init__.py  o2lite.py  py3discovery.py
pffft/: README.md  ffts_compat.cpp  ffts_compat.h  pffft.c  pffft.h  pffft.hpp
preproc/: consolidate_imports.py  f2a.py  implementation.py  makedspmakefile.py  params.py  u2f.py
pyarco/: README.md  arco.py  arco_engine.py  arco_instr.py  arco_ugens.py  pan.py  requirements-dev.txt  sched.py  score.py  steps.py  supersaw.py  synth.py  terminput.py  timemap.py  velocity.py
pyarco/tests/: conftest.py  test_actions.py  test_constants.py  test_instr.py  test_lifecycle.py  test_rate_guards.py  test_smoke.py  test_supersaw.py  test_ugens.py
pyarco/ugens/: add.py  allpass.py  blend.py  chorddetect.py  delay.py  delayvi.py  dnsample.py  dualslewb.py  envelope.py  fader.py  feedback.py  fileplay.py  filerec.py  flsyn.py  granstream.py  mathugen.py  mix.py  multisend.py  o2audioio.py  olapitchshift.py  onset.py  probe.py  pv.py  pwe.py  pwl.py  recplay.py  reverb.py  route.py  smoothb.py  spectralcentroid.py  spectralrolloff.py  stdistr.py  sum.py  tableosc.py  thru.py  trig.py  unaryugen.py  vu.py  yin.py  zero.py
serpent/: arco.cmakeinclude  arco4.cmakeinclude
serpent/src/: arco4_init.cpp  arco4_init.h  arcougenid.cpp  arcougenid.h  make_ugenid_interface.srp  sarco.cpp  sugenid.cpp
serpent/srp/: add.srp  allpass.srp  alpass.srp  arco.srp  arcoscope.srp  arcoslider.srp  audiodev.srp  blend.srp  build_application.srp  chorddetect.srp  chorusrbd.srp  constraint.srp  delay.srp  delayvi.srp  dnsampleb.srp  dualslewb.srp  envelope.srp  fader.srp  feedback.srp  fileplay.srp  filerec.srp  flsyn.srp  granstream.srp  instr.srp  mathugen.srp  mix.srp  mult.srp  multisend.srp  o2audioio.srp  o2msgutil.srp  o2util.srp  olapitchshift.srp  onset.srp  overdrive.srp  pan.srp  probe.srp  pv.srp  pwe.srp  pwl.srp  recplay.srp  (+23 more)
server/: CMakeLists.txt  README.md  arcoserver.cmakeinclude
server/src/: arco.cpp  arco4.cpp  arco_ui.cpp  arco_ui.h  cmtio.c  cmtio.h  fieldentry.cpp  fieldentry.h  svprefs.cpp  svprefs.h
server/src/local_form/: form.h
ugens/: .gitignore  README.md  generate.sh  generate_all.sh  generate_mult.sh  generate_sine.sh  genmult.sh  mult.cpp  mult.h  mult_aa_a.fh  mult_aa_a.gold.dsp  mult_ab_a.dsp  mult_ab_a.fh  mult_ba_a.dsp  mult_bb_a.dsp  multb.cpp  multb.h  multb_bb_b.dsp  multb_bb_b.fh  sine.cpp  sine.h  sine.hg  sine.ugen  sine_aa_a.c  sine_aa_a.fh  sine_aa_a.gold.dsp  sine_aa_a.gold.fh  sine_ab_a.dsp  sine_ba_a.dsp  sine_bb_a.fh  sine_bb_a.h  sine_bb_b.fh  sineb.cpp  sineb.h  sineb_bb_b.dsp  sineb_bb_b.fh  sineb_bb_b.gold.dsp  sineb_bb_b.gold.fh
ugens/highpass/: highpass.cpp  (+5 more)
(+106 files in other folders)
